--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
     <title>Pikodex</title>
 </head>
-<body>
-    <main>
-        <div id="container"></div>
-    </main>
 
+<body>
+    <header>
+        <h1 id="title">PIKODEX</h1>
+    </header>
+    <main>
+        <div id="container">
+            <!-- <section id="left-column"></section>
+            <section id="middle-column"></section>
+            <section id="right-column"></section> -->
+        </div>
+    </main>
     <script type="module" src="./scripts/main.js"></script>
 </body>
+
 </html>
